# stubborn_buddies

./: README.md
stubborn_buddies/: CMakeLists.txt  package.xml
stubborn_buddies/launch/: composition.launch.xml  stubborn_buddies.launch.xml
stubborn_buddies/src/: lifecycle_heartbeat.cpp  lifecycle_talker.cpp  lifecycle_watchdog.cpp  linktime_composition.cpp
stubborn_buddies_msgs/: CMakeLists.txt  package.xml
